# obs-studio

./: CMakeLists.txt  droidcam.spec  package.sh
DEBIAN/: control
UI/: CMakeLists.txt  droidcam-obs.manifest  droidcam-obs.rc.in  obs-app.cpp  platform-windows.cpp  platform-x11.cpp  record-button.cpp  remote-text.cpp  source-tree.cpp  source-tree.hpp  ui-config.h.in  window-basic-about.cpp  window-basic-about.hpp  window-basic-droidcam-overrides.cpp  window-basic-droidcam-overrides.hpp  window-basic-main-droidcam-overrides.cpp  window-basic-main-droidcam-overrides.hpp  window-basic-main-outputs.cpp  window-basic-main-screenshot.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-preview.hpp  window-basic-settings.cpp  window-basic-status-bar.cpp  window-extra-browsers.cpp
UI/data/locale/: en-US.ini
UI/data/themes/: Flat Dark.qss
UI/forms/: DroidCamAbout.ui  obs.qrc
UI/win-update/: droidcam-update.cpp  sigcheck.cpp
UI/xdg-data/: com.dev47apps.droidcam.desktop  com.dev47apps.droidcam.ld.conf  droidcam.sh
build-aux/: com.obsproject.Studio.json
cmake/: copy_on_debug_helper.cmake
libobs/: obs-source.c  obs.c
plugins/: CMakeLists.txt
plugins/linux-virtualcam/: CMakeLists.txt  alsa-output.c  linux-virtualcam.c  v4l2-output.c
